// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner should render close button 1`] = `
<aside
  aria-label="Banner"
  className="mock-classname banner banner"
>
  <div
    className="bannerContent banner--content imagePositionLeft image-position__left closeButtonSpacing close-button-spacing"
    data-testid="banner"
  >
    <div
      data-onclick="onclick-provided"
      data-testid="cancel-button"
    />
    <h2
      className="bannerTitle banner--title"
    >
      mock title
    </h2>
    <h3
      className="bannerSubtitle banner--subtitle"
    >
      mock Subtitle
    </h3>
    <img
      alt="mock image alt"
      className="bannerImage banner--image"
      src="mockImage.src"
    />
  </div>
</aside>
`;

exports[`Banner should render correctly without props 1`] = `
<aside
  aria-label="Banner"
  className="banner banner"
>
  <div
    className="bannerContent banner--content imagePositionLeft image-position__left"
    data-testid="banner"
  />
</aside>
`;

exports[`Banner should render in Right to Left mode 1`] = `
<aside
  aria-label="Banner"
  className="mock-classname banner banner rtl"
>
  <div
    className="bannerContent banner--content imagePositionLeft image-position__left closeButtonSpacing close-button-spacing"
    data-testid="banner"
  >
    <div
      data-onclick="onclick-provided"
      data-testid="cancel-button"
    />
    <h2
      className="bannerTitle banner--title"
    >
      mock title
    </h2>
    <h3
      className="bannerSubtitle banner--subtitle"
    >
      mock Subtitle
    </h3>
    <img
      alt="mock image alt"
      className="bannerImage banner--image mock-image-classname"
      src="mockImage.src"
    />
  </div>
</aside>
`;

exports[`Banner should render title, subtitle and image 1`] = `
<aside
  aria-label="Banner"
  className="mock-classname banner banner"
>
  <div
    className="bannerContent banner--content imagePositionLeft image-position__left"
    data-testid="banner"
  >
    <h2
      className="bannerTitle banner--title"
    >
      mock title
    </h2>
    <h3
      className="bannerSubtitle banner--subtitle"
    >
      mock Subtitle
    </h3>
    <img
      alt="mock image alt"
      className="bannerImage banner--image mock-image-classname"
      src="mockImage.src"
    />
  </div>
</aside>
`;

exports[`Banner should render with correct image position class - bottom 1`] = `
<aside
  aria-label="Banner"
  className="banner banner"
>
  <div
    className="bannerContent banner--content imagePositionBottom image-position__bottom"
    data-testid="banner"
  />
</aside>
`;

exports[`Banner should render with correct image position class - left 1`] = `
<aside
  aria-label="Banner"
  className="banner banner"
>
  <div
    className="bannerContent banner--content imagePositionLeft image-position__left"
    data-testid="banner"
  />
</aside>
`;

exports[`Banner should render with correct image position class - right 1`] = `
<aside
  aria-label="Banner"
  className="banner banner"
>
  <div
    className="bannerContent banner--content imagePositionRight image-position__right"
    data-testid="banner"
  />
</aside>
`;

exports[`Banner should render with correct image position class - top 1`] = `
<aside
  aria-label="Banner"
  className="banner banner"
>
  <div
    className="bannerContent banner--content imagePositionTop image-position__top"
    data-testid="banner"
  />
</aside>
`;

exports[`Banner should use custom render function for subtitle 1`] = `
<aside
  aria-label="Banner"
  className="banner banner"
>
  <div
    className="bannerContent banner--content imagePositionLeft image-position__left"
    data-testid="banner"
  >
    <h2
      className="bannerTitle banner--title"
    >
      mock title
    </h2>
    <h3
      className="bannerSubtitle banner--subtitle"
    >
      <div
        data-testid="custom_render"
      >
        mock Subtitle
      </div>
    </h3>
  </div>
</aside>
`;

exports[`Banner should use custom render function for title 1`] = `
<aside
  aria-label="Banner"
  className="banner banner"
>
  <div
    className="bannerContent banner--content imagePositionLeft image-position__left"
    data-testid="banner"
  >
    <h2
      className="bannerTitle banner--title"
    >
      <div
        data-testid="custom_render"
      >
        mock title
      </div>
    </h2>
    <h3
      className="bannerSubtitle banner--subtitle"
    >
      mock Subtitle
    </h3>
  </div>
</aside>
`;
